# diesel_versioning

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yaml
diesel_versioning/: Cargo.toml
diesel_versioning/src/: lib.rs
diesel_versioning_derives/: Cargo.toml
diesel_versioning_derives/src/: lib.rs  model.rs  versioned.rs
tests/: .env  Cargo.toml
tests/migrations-psql/2025-05-09-084254_simpletable/: up.sql
tests/migrations/2025-05-09-084254_simpletable/: up.sql
tests/src/: model.rs  schema.rs
tests/tests/: fixtures.rs  test_postgres.rs  test_sqlite.rs
