[package]
name = "diesel_versioning_derives"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Frank Stolle <frank@stolle.email>"]
description = "You should not use this crate directly, it is internal to diesel_versioning."
documentation = "https://docs.rs/diesel_versioning"
homepage = "https://github.com/frankstolle/diesel_versioning"
repository = "https://github.com/frankstolle/diesel_versioning"
edition.workspace = true

[features]
default = []
async = []

[dependencies]
syn = { version = "2.0.101", features = ["derive", "fold", "full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
proc-macro-error = "1.0.4"

[lib]
proc-macro = true
